update docs for unstable

--- a/unstable/libp2p/crypto/ed25519/constants.html
+++ b/unstable/libp2p/crypto/ed25519/constants.html
@@ -1524,14 +1524,14 @@ window.addEventListener("DOMContentLoaded", main2);
               0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8,
               0x00'u8, 0x00'u8, 0x00'u8, 0x10'u8]">CurveOrder</a></li>
   <li><a class="reference" href="#D2Const"
-    title="D2Const = [-21827239'i32, -5839606'i32, -30745221'i32, 13898782'i32, 229458'i32,
-           15978800'i32, -12551817'i32, -6495438'i32, 29715968'i32, 9444199'i32]">D2Const</a></li>
+    title="D2Const = [-21827239'i32, -5839606, -30745221, 13898782, 229458, 15978800,
+           -12551817, -6495438, 29715968, 9444199]">D2Const</a></li>
   <li><a class="reference" href="#DConst"
-    title="DConst = [-10913610'i32, 13857413'i32, -15372611'i32, 6949391'i32, 114729'i32,
-          -8787816'i32, -6275908'i32, -3247719'i32, -18696448'i32, -12055116'i32]">DConst</a></li>
+    title="DConst = [-10913610'i32, 13857413, -15372611, 6949391, 114729, -8787816,
+          -6275908, -3247719, -18696448, -12055116]">DConst</a></li>
   <li><a class="reference" href="#SqrTm1"
-    title="SqrTm1 = [-32595792'i32, -7943725'i32, 9377950'i32, 3500415'i32, 12389472'i32,
-          -272473'i32, -25146209'i32, -2005654'i32, 326686'i32, 11406482'i32]">SqrTm1</a></li>
+    title="SqrTm1 = [-32595792'i32, -7943725, 9377950, 3500415, 12389472, -272473,
+          -25146209, -2005654, 326686, 11406482]">SqrTm1</a></li>
   <li><a class="reference" href="#ZeroFe"
     title="ZeroFe = [0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8,
           0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8, 0x00'u8,
@@ -2976,8 +2976,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="D2Const" class="tohide">
-<dt><pre><a href="constants.html#D2Const"><span class="Identifier">D2Const</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">-21827239'i32</span><span class="Other">,</span> <span class="DecNumber">-5839606'i32</span><span class="Other">,</span> <span class="DecNumber">-30745221'i32</span><span class="Other">,</span> <span class="DecNumber">13898782'i32</span><span class="Other">,</span> <span class="DecNumber">229458'i32</span><span class="Other">,</span>
-           <span class="DecNumber">15978800'i32</span><span class="Other">,</span> <span class="DecNumber">-12551817'i32</span><span class="Other">,</span> <span class="DecNumber">-6495438'i32</span><span class="Other">,</span> <span class="DecNumber">29715968'i32</span><span class="Other">,</span> <span class="DecNumber">9444199'i32</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="constants.html#D2Const"><span class="Identifier">D2Const</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">-21827239'i32</span><span class="Other">,</span> <span class="DecNumber">-5839606</span><span class="Other">,</span> <span class="DecNumber">-30745221</span><span class="Other">,</span> <span class="DecNumber">13898782</span><span class="Other">,</span> <span class="DecNumber">229458</span><span class="Other">,</span> <span class="DecNumber">15978800</span><span class="Other">,</span>
+           <span class="DecNumber">-12551817</span><span class="Other">,</span> <span class="DecNumber">-6495438</span><span class="Other">,</span> <span class="DecNumber">29715968</span><span class="Other">,</span> <span class="DecNumber">9444199</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -2989,8 +2989,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="DConst" class="tohide">
-<dt><pre><a href="constants.html#DConst"><span class="Identifier">DConst</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">-10913610'i32</span><span class="Other">,</span> <span class="DecNumber">13857413'i32</span><span class="Other">,</span> <span class="DecNumber">-15372611'i32</span><span class="Other">,</span> <span class="DecNumber">6949391'i32</span><span class="Other">,</span> <span class="DecNumber">114729'i32</span><span class="Other">,</span>
-          <span class="DecNumber">-8787816'i32</span><span class="Other">,</span> <span class="DecNumber">-6275908'i32</span><span class="Other">,</span> <span class="DecNumber">-3247719'i32</span><span class="Other">,</span> <span class="DecNumber">-18696448'i32</span><span class="Other">,</span> <span class="DecNumber">-12055116'i32</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="constants.html#DConst"><span class="Identifier">DConst</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">-10913610'i32</span><span class="Other">,</span> <span class="DecNumber">13857413</span><span class="Other">,</span> <span class="DecNumber">-15372611</span><span class="Other">,</span> <span class="DecNumber">6949391</span><span class="Other">,</span> <span class="DecNumber">114729</span><span class="Other">,</span> <span class="DecNumber">-8787816</span><span class="Other">,</span>
+          <span class="DecNumber">-6275908</span><span class="Other">,</span> <span class="DecNumber">-3247719</span><span class="Other">,</span> <span class="DecNumber">-18696448</span><span class="Other">,</span> <span class="DecNumber">-12055116</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -3002,8 +3002,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="SqrTm1" class="tohide">
-<dt><pre><a href="constants.html#SqrTm1"><span class="Identifier">SqrTm1</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">-32595792'i32</span><span class="Other">,</span> <span class="DecNumber">-7943725'i32</span><span class="Other">,</span> <span class="DecNumber">9377950'i32</span><span class="Other">,</span> <span class="DecNumber">3500415'i32</span><span class="Other">,</span> <span class="DecNumber">12389472'i32</span><span class="Other">,</span>
-          <span class="DecNumber">-272473'i32</span><span class="Other">,</span> <span class="DecNumber">-25146209'i32</span><span class="Other">,</span> <span class="DecNumber">-2005654'i32</span><span class="Other">,</span> <span class="DecNumber">326686'i32</span><span class="Other">,</span> <span class="DecNumber">11406482'i32</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="constants.html#SqrTm1"><span class="Identifier">SqrTm1</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">-32595792'i32</span><span class="Other">,</span> <span class="DecNumber">-7943725</span><span class="Other">,</span> <span class="DecNumber">9377950</span><span class="Other">,</span> <span class="DecNumber">3500415</span><span class="Other">,</span> <span class="DecNumber">12389472</span><span class="Other">,</span> <span class="DecNumber">-272473</span><span class="Other">,</span>
+          <span class="DecNumber">-25146209</span><span class="Other">,</span> <span class="DecNumber">-2005654</span><span class="Other">,</span> <span class="DecNumber">326686</span><span class="Other">,</span> <span class="DecNumber">11406482</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -3040,7 +3040,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-21 08:42:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-28 14:50:03 UTC</small>
       </div>
     </div>
   </div>
