--- a/unstable/libp2p/crypto/rsa.html
+++ b/unstable/libp2p/crypto/rsa.html
@@ -243,15 +243,19 @@ window.addEventListener("DOMContentLoaded", main2);
   <li><a class="reference" href="#MinKeySize"
     title="MinKeySize = 2048">MinKeySize</a></li>
   <li><a class="reference" href="#RsaOidSha1"
-    title="RsaOidSha1 = [5'u, 43'u, 14'u, 3'u, 2'u, 26'u]">RsaOidSha1</a></li>
+    title="RsaOidSha1 = [5'u, 0x0000002B, 0x0000000E, 0x00000003, 0x00000002, 0x0000001A]">RsaOidSha1</a></li>
   <li><a class="reference" href="#RsaOidSha224"
-    title="RsaOidSha224 = [9'u, 96'u, 134'u, 72'u, 1'u, 101'u, 3'u, 4'u, 2'u, 4'u]">RsaOidSha224</a></li>
+    title="RsaOidSha224 = [9'u, 0x00000060, 0x00000086, 0x00000048, 0x00000001, 0x00000065,
+                0x00000003, 0x00000004, 0x00000002, 0x00000004]">RsaOidSha224</a></li>
   <li><a class="reference" href="#RsaOidSha256"
-    title="RsaOidSha256 = [9'u, 96'u, 134'u, 72'u, 1'u, 101'u, 3'u, 4'u, 2'u, 1'u]">RsaOidSha256</a></li>
+    title="RsaOidSha256 = [9'u, 0x00000060, 0x00000086, 0x00000048, 0x00000001, 0x00000065,
+                0x00000003, 0x00000004, 0x00000002, 0x00000001]">RsaOidSha256</a></li>
   <li><a class="reference" href="#RsaOidSha384"
-    title="RsaOidSha384 = [9'u, 96'u, 134'u, 72'u, 1'u, 101'u, 3'u, 4'u, 2'u, 2'u]">RsaOidSha384</a></li>
+    title="RsaOidSha384 = [9'u, 0x00000060, 0x00000086, 0x00000048, 0x00000001, 0x00000065,
+                0x00000003, 0x00000004, 0x00000002, 0x00000002]">RsaOidSha384</a></li>
   <li><a class="reference" href="#RsaOidSha512"
-    title="RsaOidSha512 = [9'u, 96'u, 134'u, 72'u, 1'u, 101'u, 3'u, 4'u, 2'u, 3'u]">RsaOidSha512</a></li>
+    title="RsaOidSha512 = [9'u, 0x00000060, 0x00000086, 0x00000048, 0x00000001, 0x00000065,
+                0x00000003, 0x00000004, 0x00000002, 0x00000003]">RsaOidSha512</a></li>
 
   </ul>
 </li>
@@ -554,7 +558,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="RsaOidSha1" class="tohide">
-<dt><pre><a href="rsa.html#RsaOidSha1"><span class="Identifier">RsaOidSha1</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">5'u</span><span class="Other">,</span> <span class="DecNumber">43'u</span><span class="Other">,</span> <span class="DecNumber">14'u</span><span class="Other">,</span> <span class="DecNumber">3'u</span><span class="Other">,</span> <span class="DecNumber">2'u</span><span class="Other">,</span> <span class="DecNumber">26'u</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="rsa.html#RsaOidSha1"><span class="Identifier">RsaOidSha1</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">5'u</span><span class="Other">,</span> <span class="DecNumber">0x0000002B</span><span class="Other">,</span> <span class="DecNumber">0x0000000E</span><span class="Other">,</span> <span class="DecNumber">0x00000003</span><span class="Other">,</span> <span class="DecNumber">0x00000002</span><span class="Other">,</span> <span class="DecNumber">0x0000001A</span><span class="Other">]</span></pre></dt>
 <dd>
 
 RSA PKCS#1.5 SHA-1 hash object identifier.
@@ -566,7 +570,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="RsaOidSha224" class="tohide">
-<dt><pre><a href="rsa.html#RsaOidSha224"><span class="Identifier">RsaOidSha224</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">9'u</span><span class="Other">,</span> <span class="DecNumber">96'u</span><span class="Other">,</span> <span class="DecNumber">134'u</span><span class="Other">,</span> <span class="DecNumber">72'u</span><span class="Other">,</span> <span class="DecNumber">1'u</span><span class="Other">,</span> <span class="DecNumber">101'u</span><span class="Other">,</span> <span class="DecNumber">3'u</span><span class="Other">,</span> <span class="DecNumber">4'u</span><span class="Other">,</span> <span class="DecNumber">2'u</span><span class="Other">,</span> <span class="DecNumber">4'u</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="rsa.html#RsaOidSha224"><span class="Identifier">RsaOidSha224</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">9'u</span><span class="Other">,</span> <span class="DecNumber">0x00000060</span><span class="Other">,</span> <span class="DecNumber">0x00000086</span><span class="Other">,</span> <span class="DecNumber">0x00000048</span><span class="Other">,</span> <span class="DecNumber">0x00000001</span><span class="Other">,</span> <span class="DecNumber">0x00000065</span><span class="Other">,</span>
+                <span class="DecNumber">0x00000003</span><span class="Other">,</span> <span class="DecNumber">0x00000004</span><span class="Other">,</span> <span class="DecNumber">0x00000002</span><span class="Other">,</span> <span class="DecNumber">0x00000004</span><span class="Other">]</span></pre></dt>
 <dd>
 
 RSA PKCS#1.5 SHA-224 hash object identifier.
@@ -578,7 +583,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="RsaOidSha256" class="tohide">
-<dt><pre><a href="rsa.html#RsaOidSha256"><span class="Identifier">RsaOidSha256</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">9'u</span><span class="Other">,</span> <span class="DecNumber">96'u</span><span class="Other">,</span> <span class="DecNumber">134'u</span><span class="Other">,</span> <span class="DecNumber">72'u</span><span class="Other">,</span> <span class="DecNumber">1'u</span><span class="Other">,</span> <span class="DecNumber">101'u</span><span class="Other">,</span> <span class="DecNumber">3'u</span><span class="Other">,</span> <span class="DecNumber">4'u</span><span class="Other">,</span> <span class="DecNumber">2'u</span><span class="Other">,</span> <span class="DecNumber">1'u</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="rsa.html#RsaOidSha256"><span class="Identifier">RsaOidSha256</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">9'u</span><span class="Other">,</span> <span class="DecNumber">0x00000060</span><span class="Other">,</span> <span class="DecNumber">0x00000086</span><span class="Other">,</span> <span class="DecNumber">0x00000048</span><span class="Other">,</span> <span class="DecNumber">0x00000001</span><span class="Other">,</span> <span class="DecNumber">0x00000065</span><span class="Other">,</span>
+                <span class="DecNumber">0x00000003</span><span class="Other">,</span> <span class="DecNumber">0x00000004</span><span class="Other">,</span> <span class="DecNumber">0x00000002</span><span class="Other">,</span> <span class="DecNumber">0x00000001</span><span class="Other">]</span></pre></dt>
 <dd>
 
 RSA PKCS#1.5 SHA-256 hash object identifier.
@@ -590,7 +596,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="RsaOidSha384" class="tohide">
-<dt><pre><a href="rsa.html#RsaOidSha384"><span class="Identifier">RsaOidSha384</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">9'u</span><span class="Other">,</span> <span class="DecNumber">96'u</span><span class="Other">,</span> <span class="DecNumber">134'u</span><span class="Other">,</span> <span class="DecNumber">72'u</span><span class="Other">,</span> <span class="DecNumber">1'u</span><span class="Other">,</span> <span class="DecNumber">101'u</span><span class="Other">,</span> <span class="DecNumber">3'u</span><span class="Other">,</span> <span class="DecNumber">4'u</span><span class="Other">,</span> <span class="DecNumber">2'u</span><span class="Other">,</span> <span class="DecNumber">2'u</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="rsa.html#RsaOidSha384"><span class="Identifier">RsaOidSha384</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">9'u</span><span class="Other">,</span> <span class="DecNumber">0x00000060</span><span class="Other">,</span> <span class="DecNumber">0x00000086</span><span class="Other">,</span> <span class="DecNumber">0x00000048</span><span class="Other">,</span> <span class="DecNumber">0x00000001</span><span class="Other">,</span> <span class="DecNumber">0x00000065</span><span class="Other">,</span>
+                <span class="DecNumber">0x00000003</span><span class="Other">,</span> <span class="DecNumber">0x00000004</span><span class="Other">,</span> <span class="DecNumber">0x00000002</span><span class="Other">,</span> <span class="DecNumber">0x00000002</span><span class="Other">]</span></pre></dt>
 <dd>
 
 RSA PKCS#1.5 SHA-384 hash object identifier.
@@ -602,7 +609,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="RsaOidSha512" class="tohide">
-<dt><pre><a href="rsa.html#RsaOidSha512"><span class="Identifier">RsaOidSha512</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">9'u</span><span class="Other">,</span> <span class="DecNumber">96'u</span><span class="Other">,</span> <span class="DecNumber">134'u</span><span class="Other">,</span> <span class="DecNumber">72'u</span><span class="Other">,</span> <span class="DecNumber">1'u</span><span class="Other">,</span> <span class="DecNumber">101'u</span><span class="Other">,</span> <span class="DecNumber">3'u</span><span class="Other">,</span> <span class="DecNumber">4'u</span><span class="Other">,</span> <span class="DecNumber">2'u</span><span class="Other">,</span> <span class="DecNumber">3'u</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="rsa.html#RsaOidSha512"><span class="Identifier">RsaOidSha512</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">9'u</span><span class="Other">,</span> <span class="DecNumber">0x00000060</span><span class="Other">,</span> <span class="DecNumber">0x00000086</span><span class="Other">,</span> <span class="DecNumber">0x00000048</span><span class="Other">,</span> <span class="DecNumber">0x00000001</span><span class="Other">,</span> <span class="DecNumber">0x00000065</span><span class="Other">,</span>
+                <span class="DecNumber">0x00000003</span><span class="Other">,</span> <span class="DecNumber">0x00000004</span><span class="Other">,</span> <span class="DecNumber">0x00000002</span><span class="Other">,</span> <span class="DecNumber">0x00000003</span><span class="Other">]</span></pre></dt>
 <dd>
 
 RSA PKCS#1.5 SHA-512 hash object identifier.
@@ -1021,7 +1029,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-21 08:42:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-28 14:50:03 UTC</small>
       </div>
     </div>
   </div>
