--- a/unstable/libp2p/peerid.html
+++ b/unstable/libp2p/peerid.html
@@ -464,9 +464,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Read <tt class="docutils literal"><span class="pre">PeerId</span></tt> from ProtoBuf's message and validate it
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/peerid.nim#L212"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/peerid.nim#L204"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerid.nim#L212" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerid.nim#L204" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -595,9 +595,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Returns <tt class="docutils literal"><span class="pre">true</span></tt> if <tt class="docutils literal"><span class="pre">pid</span></tt> matches private key <tt class="docutils literal"><span class="pre">seckey</span></tt>.
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/peerid.nim#L194"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/peerid.nim#L190"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerid.nim#L194" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerid.nim#L190" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -660,9 +660,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Write PeerId value <tt class="docutils literal"><span class="pre">peerid</span></tt> to object <tt class="docutils literal"><span class="pre">pb</span></tt> using ProtoBuf's encoding.
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/peerid.nim#L208"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/peerid.nim#L200"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerid.nim#L208" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerid.nim#L200" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -672,9 +672,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Write PeerId value <tt class="docutils literal"><span class="pre">peerid</span></tt> to buffer <tt class="docutils literal"><span class="pre">vb</span></tt>.
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/peerid.nim#L204"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/peerid.nim#L196"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerid.nim#L204" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerid.nim#L196" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -796,7 +796,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="utility.html#compilesOr.t,untyped,untyped"><span class="Identifier">compilesOr</span></a>, <a href="utility.html#exceptionToAssert.t,untyped"><span class="Identifier">exceptionToAssert</span></a>, <a href="utility.html#public.t"><span class="Identifier">public</span></a>, <a href="utility.html#shortLog,openArray[byte]"><span class="Identifier">shortLog</span></a>, <a href="utility.html#safeConvert.t,S"><span class="Identifier">safeConvert</span></a>, <a href="utility.html#shortLog,string"><span class="Identifier">shortLog</span></a>
+<a href="utility.html#withValue.t,,untyped,untyped"><span class="Identifier">withValue</span></a>, <a href="utility.html#safeConvert.t,S"><span class="Identifier">safeConvert</span></a>, <a href="utility.html#shortLog,openArray[byte]"><span class="Identifier">shortLog</span></a>, <a href="utility.html#withValue.m,,untyped,untyped,untyped"><span class="Identifier">withValue</span></a>, <a href="utility.html#public.t"><span class="Identifier">public</span></a>, <a href="utility.html#shortLog,string"><span class="Identifier">shortLog</span></a>, <a href="utility.html#compilesOr.t,untyped,untyped"><span class="Identifier">compilesOr</span></a>, <a href="utility.html#valueOr.t,Option[T],untyped"><span class="Identifier">valueOr</span></a>, <a href="utility.html#toOpt.t,Result[T,E]"><span class="Identifier">toOpt</span></a>, <a href="utility.html#exceptionToAssert.t,untyped"><span class="Identifier">exceptionToAssert</span></a>
 </dl></div>
 
   </div>
@@ -806,7 +806,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-21 08:42:29 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-28 14:50:06 UTC</small>
       </div>
     </div>
   </div>
