--- a/unstable/libp2p/utility.html
+++ b/unstable/libp2p/utility.html
@@ -210,6 +210,17 @@ window.addEventListener("DOMContentLoaded", main2);
   </ul>
 </li>
 <li>
+  <a class="reference reference-toplevel" href="#17" id="67">Macros</a>
+  <ul class="simple simple-toc-section">
+      <ul class="simple nested-toc-section">withValue
+      <li><a class="reference" href="#withValue.m%2C%2Cuntyped%2Cuntyped%2Cuntyped"
+    title="withValue[T](self: Opt[T] | Option[T]; value, body, body2: untyped): untyped">withValue[T](self: Opt[T] | Option[T]; value, body, body2: untyped): untyped</a></li>
+
+  </ul>
+
+  </ul>
+</li>
+<li>
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">compilesOr
@@ -230,6 +241,21 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple nested-toc-section">safeConvert
       <li><a class="reference" href="#safeConvert.t%2CS"
     title="safeConvert[T: SomeInteger; S: Ordinal](value: S): T">safeConvert[T: SomeInteger; S: Ordinal](value: S): T</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">toOpt
+      <li><a class="reference" href="#toOpt.t%2CResult%5BT%2CE%5D"
+    title="toOpt[T, E](self: Result[T, E]): Opt[T]">toOpt[T, E](self: Result[T, E]): Opt[T]</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">valueOr
+      <li><a class="reference" href="#valueOr.t%2COption%5BT%5D%2Cuntyped"
+    title="valueOr[T](self: Option[T]; body: untyped): untyped">valueOr[T](self: Option[T]; body: untyped): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">withValue
+      <li><a class="reference" href="#withValue.t%2C%2Cuntyped%2Cuntyped"
+    title="withValue[T](self: Opt[T] | Option[T]; value, body: untyped): untyped">withValue[T](self: Opt[T] | Option[T]; value, body: untyped): untyped</a></li>
 
   </ul>
 
@@ -257,9 +283,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L25"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L28"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L25" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -269,9 +295,27 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L37"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L40"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L37" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+
+</dl></div>
+<div class="section" id="17">
+<h1><a class="toc-backref" href="#17">Macros</a></h1>
+<dl class="item">
+<div id="withValue.m,,untyped,untyped,untyped" class="tohide">
+<dt><pre><span class="Keyword">macro</span> <a href="#withValue.m%2C%2Cuntyped%2Cuntyped%2Cuntyped"><span class="Identifier">withValue</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span> <span class="Operator">|</span> <span class="Identifier">Option</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">,</span> <span class="Identifier">body</span><span class="Other">,</span> <span class="Identifier">body2</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L92"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L92" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -286,9 +330,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L19"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L22"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L19" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -310,9 +354,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L14"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L17"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L14" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L17" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -328,6 +372,42 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="toOpt.t,Result[T,E]" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#toOpt.t%2CResult%5BT%2CE%5D"><span class="Identifier">toOpt</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">,</span> <span class="Identifier">E</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">,</span> <span class="Identifier">E</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L107"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L107" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="valueOr.t,Option[T],untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#valueOr.t%2COption%5BT%5D%2Cuntyped"><span class="Identifier">valueOr</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L101"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L101" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="withValue.t,,untyped,untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#withValue.t%2C%2Cuntyped%2Cuntyped"><span class="Identifier">withValue</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span> <span class="Operator">|</span> <span class="Identifier">Option</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">,</span> <span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L87"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L87" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 
 </dl></div>
 
@@ -338,7 +418,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-21 08:42:24 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-28 14:50:01 UTC</small>
       </div>
     </div>
   </div>
