update docs for traffic-scoring

--- a/traffic-scoring/libp2p/wire.html
+++ b/traffic-scoring/libp2p/wire.html
@@ -501,8 +501,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="createAsyncSocket,MultiAddress" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#createAsyncSocket%2CMultiAddress"><span class="Identifier">createAsyncSocket</span></a><span class="Other">(</span><span class="Identifier">ma</span><span class="Other">:</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">AsyncFD</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><a href="errors.html#LPError"><span class="Identifier">LPError</span></a><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#createAsyncSocket%2CMultiAddress"><span class="Identifier">createAsyncSocket</span></a><span class="Other">(</span><span class="Identifier">ma</span><span class="Other">:</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">AsyncFD</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">,</span> <a href="errors.html#LPError"><span class="Identifier">LPError</span></a><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 <p>Create new asynchronous socket using MultiAddress' <tt class="docutils literal"><span class="pre">ma</span></tt> socket type and protocol information.</p>
@@ -604,7 +604,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-26 14:29:49 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-07-03 11:48:58 UTC</small>
       </div>
     </div>
   </div>
