--- a/traffic-scoring/libp2p/protocols/identify.html
+++ b/traffic-scoring/libp2p/protocols/identify.html
@@ -256,7 +256,7 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">decodeMsg
       <li><a class="reference" href="#decodeMsg%2Cseq%5Bbyte%5D"
-    title="decodeMsg(buf: seq[byte]): Option[IdentifyInfo]">decodeMsg(buf: seq[byte]): Option[IdentifyInfo]</a></li>
+    title="decodeMsg(buf: seq[byte]): Opt[IdentifyInfo]">decodeMsg(buf: seq[byte]): Opt[IdentifyInfo]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">identify
@@ -506,15 +506,15 @@ class="link-seesrc" target="_blank">Source</a>
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <div id="decodeMsg,seq[byte]" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#decodeMsg%2Cseq%5Bbyte%5D"><span class="Identifier">decodeMsg</span></a><span class="Other">(</span><span class="Identifier">buf</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="identify.html#IdentifyInfo"><span class="Identifier">IdentifyInfo</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+<dt><pre><span class="Keyword">proc</span> <a href="#decodeMsg%2Cseq%5Bbyte%5D"><span class="Identifier">decodeMsg</span></a><span class="Other">(</span><span class="Identifier">buf</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="identify.html#IdentifyInfo"><span class="Identifier">IdentifyInfo</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L115"
+href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L112"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L115" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L112" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -526,9 +526,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L189"
+href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L171"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L189" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L171" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -538,9 +538,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L225"
+href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L200"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L225" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L200" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -551,9 +551,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L157"
+href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L139"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L157" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L139" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -564,9 +564,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Create a IdentifyPush protocol. <tt class="docutils literal"><span class="pre"><span class="Identifier">handler</span></span></tt> will be called every time a peer sends us new <tt class="docutils literal"><span class="pre"><span class="Identifier">PeerInfo</span></span></tt>
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L218"
+href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L193"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L218" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L193" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -578,9 +578,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Send new <tt class="docutils literal"><span class="pre"><span class="Identifier">peerInfo</span></span></tt>s to a connection
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L257"
+href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L229"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L257" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L229" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -595,9 +595,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L170"
+href="https://github.com/status-im/nim-libp2p/tree/traffic-scoring/libp2p/protocols/identify.nim#L152"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L170" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/identify.nim#L152" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -633,7 +633,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-26 14:29:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-07-03 11:48:58 UTC</small>
       </div>
     </div>
   </div>
